calendar.less: Fix monthly calendar being cut off horizontally

--- a/public/css/calendar.less
+++ b/public/css/calendar.less
@@ -122,7 +122,7 @@
   .overlay {
     display: grid;
     grid-template-rows: repeat(@weeks * @rowsPerDay, 1fr);
-    grid-template-columns: repeat(@days * @columnsPerDay, minmax(0.125em, 1fr));
+    grid-template-columns: repeat(@days * @columnsPerDay, minmax(0, 1fr));
     overflow: hidden;
   }
 
